WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18467
REGRESSION (
r31155
): zagat.com signon page: text is shifted to right
https://bugs.webkit.org/show_bug.cgi?id=18467
Summary
REGRESSION (r31155): zagat.com signon page: text is shifted to right
Mike
Reported
2008-04-13 19:15:12 PDT
I have no clue about the technical aspects of this problem, but on the zagat.com signon page(
https://www.zagat.com/account/signin.aspx?HID=signin_top_left_ns&SignInKey=HeaderSignInLink&RURL=http://www.zagat.com/index.aspx
), the text is very badly misrendered to the point where it is unreadable.
Attachments
Reduction
(506 bytes, text/html)
2008-04-13 20:01 PDT
,
Matt Lilek
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2008-04-13 19:21:12 PDT
Confirmed with
r31853
. Regression from Safari 3.1.
Matt Lilek
Comment 2
2008-04-13 20:01:29 PDT
Created
attachment 20513
[details]
Reduction
Matt Lilek
Comment 3
2008-04-13 20:03:05 PDT
This reduction renders the same in Safari 3.1 and IE7 (which AFAIK is the only other browser to support the CSS zoom property), ToT is the only one borked.
Dave Hyatt
Comment 4
2008-04-13 20:09:01 PDT
Interesting. What does zoom:0 mean in IE? I don't know what that means. We could just ignore it...
Matt Lilek
Comment 5
2008-04-13 20:13:27 PDT
(In reply to
comment #4
)
> Interesting. What does zoom:0 mean in IE? I don't know what that means. We > could just ignore it... >
I'm not sure. There was a comment above that rule on the site alluded to something being disabled ("/*Sign In Wrapper (disabled)*/").
Dave Hyatt
Comment 6
2008-04-13 21:12:29 PDT
I guess I'll just fix zoom:0 so that it's ignored. It seems to be a hack to get elements to "have layout" in IE.
Dave Hyatt
Comment 7
2008-04-15 12:29:03 PDT
Fixed in
r31915
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug