2008-04-15  David Hyatt  <hyatt@apple.com>

https://bugs.webkit.org/show_bug.cgi?id=18467

        Make sure to ignore zoom:0.  That is not supposed to actually do anything.  It's a hack in IE
        to cause an element to set "hasLayout."

        Reviewed by Anders

        Added fast/css/zoom-property-parsing.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):



Canonical link: https://commits.webkit.org/25437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31915 268f45cc-cd09-0410-ab3c-d52691b4dbfc